@@ -18,17 +18,19 @@
 import gtk.gdk
 from _gdkgl import *
 
-_pixmap_ext = [ ( 'set_gl_capability',   pixmap_set_gl_capability ),
-                ( 'unset_gl_capability', pixmap_unset_gl_capability ),
-                ( 'is_gl_capable',       pixmap_is_gl_capable ),
-                ( 'get_gl_pixmap',       pixmap_get_gl_pixmap ),
-                ( 'get_gl_drawable',     pixmap_get_gl_drawable ) ]
+__all__ = ["ext"]
 
-_window_ext = [ ( 'set_gl_capability',   window_set_gl_capability ),
-                ( 'unset_gl_capability', window_unset_gl_capability ),
-                ( 'is_gl_capable',       window_is_gl_capable ),
-                ( 'get_gl_window',       window_get_gl_window ),
-                ( 'get_gl_drawable',     window_get_gl_drawable ) ]
+_pixmap_ext = (('set_gl_capability',   pixmap_set_gl_capability),
+               ('unset_gl_capability', pixmap_unset_gl_capability),
+               ('is_gl_capable',       pixmap_is_gl_capable),
+               ('get_gl_pixmap',       pixmap_get_gl_pixmap),
+               ('get_gl_drawable',     pixmap_get_gl_drawable))
+
+_window_ext = (('set_gl_capability',   window_set_gl_capability),
+               ('unset_gl_capability', window_unset_gl_capability),
+               ('is_gl_capable',       window_is_gl_capable),
+               ('get_gl_window',       window_get_gl_window),
+               ('get_gl_drawable',     window_get_gl_drawable))
 
 def _register_method(obj, name, func):
     setattr(obj, name, lambda *args, **keys: apply(func, (obj,)+args, keys))
