@@ -17,14 +17,17 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA.
 
+import sys
+
 import gtk
 import gtk.gtkgl
 
 from OpenGL.GL import *
 from OpenGL.GLU import *
 
-import sys
-
+__all__ = ["GLScene", "GLSceneKey", "GLSceneButton", "GLSceneButtonMotion",
+           "GLScenePointerMotion", "GLSceneTimeout", "GLSceneIdle",
+           "GLArea", "GLApplication"]
 
 ### Base classes for OpenGL scene
 
